<resources>
    <string name="app_name">Easy Notepad</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="write_note_here">Notes</string>
    <string name="created_withDate">Created: %s</string>
    <string name="last_updated_withDate">Last updated: %s</string>
    <string name="no_title">-</string>
    <string name="note_list_info">%1$s / %2$s</string>
    <string name="no_category">Uncategorized</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="edit">Edit</string>
    <string name="confirm_delete">"Delete %s? "</string>
    <string name="search">Search</string>
    <string name="no_undo">This cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="edit_note">Edit Note</string>
    <string name="nothing_selected">Nothing selected.</string>
    <string name="send_note">Send note via</string>
    <string name="empty">No notes</string>
    <string name="select_all">Select All</string>
    <string name="share">Share</string>
    <string name="last_updated">Last Updated</string>
    <string name="date_created">Date Created</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <plurals name="notes">
        <item quantity="one">note</item>
        <item quantity="other">%d notes</item>
    </plurals>
</resources>