<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.MaterialComponents.BottomSheetDialog"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/primary_text_light"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_sortBy_lastUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_updated"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_sortBy_dateCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_created"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_sortBy_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_sortBy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>