<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:title="@string/edit_note" />

        <androidx.constraintlayout.widget.ConstraintLayout
        android:animateLayoutChanges="true"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <AutoCompleteTextView
            android:id="@+id/category_edit_text"
            android:maxLength="45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:hint="@string/category"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Category" />

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="3"
            android:maxLength="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_edit_text"
            tools:text="Title"/>

        <EditText
            android:id="@+id/body_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine|textCapSentences"
            tools:text="Note body"
            android:importantForAutofill="no"
            android:hint="@string/write_note_here"
            app:layout_constraintBottom_toTopOf="@+id/last_modified_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edit_text"/>

        <TextView
            android:id="@+id/last_modified_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Last modified"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@id/created_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/created_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Created"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

         </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>